src/test/deca/syntax/invalid/mauvais_while_5.deca
// Description:
//    mauvaise utilisation du while: autre chose qu'une exp dans la condition
//
// Resultats:
// ligne 10: "no viable alternative at input 'print'"


{
	int x = 0;
	while (print("ok")) {
	      x = x+1;
				println(x);
	      }
	  println("je suis au bout");    
}
